2 settings run heroku

--- a/pom.xml
+++ b/pom.xml
@@ -185,12 +185,12 @@
         </dependencies>
     </dependencyManagement>
 
-    <scm>
-        <connection>scm:git:ssh:git@github.com:zundarik/pocket-java-backend.git</connection>
-        <developerConnection>scm:git:ssh:git@github.com:zundarik/pocket-java-backend.git</developerConnection>
-        <tag>HEAD</tag>
-        <url>https://github.com/zundarik/pocket-java-backend.git</url>
-    </scm>
+<!--    <scm>-->
+<!--        <connection>scm:git:ssh:git@github.com:zundarik/pocket-java-backend.git</connection>-->
+<!--        <developerConnection>scm:git:ssh:git@github.com:zundarik/pocket-java-backend.git</developerConnection>-->
+<!--        <tag>HEAD</tag>-->
+<!--        <url>https://github.com/zundarik/pocket-java-backend.git</url>-->
+<!--    </scm>-->
 
     <build>
         <finalName>${project.name}</finalName>
@@ -207,10 +207,10 @@
         <plugins>
 <!--            http://java-online.ru/maven-plugins.xhtml#maven-compiler-plugin-->
 <!--            https://habr.com/ru/post/310738/-->
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
+<!--            <plugin>-->
+<!--                <groupId>org.springframework.boot</groupId>-->
+<!--                <artifactId>spring-boot-maven-plugin</artifactId>-->
+<!--            </plugin>-->
             <!--плагин для компиляции проекта-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -239,7 +239,7 @@
                         </goals>
                         <configuration>
                             <outputDirectory>
-                                ${basedir}/target/resources
+                                ${basedir}/target/classes
                             </outputDirectory>
                             <resources>
                                 <resource>
@@ -268,48 +268,48 @@
                 </executions>
             </plugin>
             <!--плагин для исключения из джарника библиотек зависимостей-->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>copy-dependencies</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>copy-dependencies</goal>
-                        </goals>
-                        <configuration>
-                            <includeScope>compile</includeScope><!--исключить тестовые зависимости-->
-                            <outputDirectory>${project.build.directory}/dependency</outputDirectory>
-                            <overWriteReleases>false</overWriteReleases>
-                            <overWriteSnapshots>false</overWriteSnapshots>
-                            <overWriteIfNewer>true</overWriteIfNewer>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
+<!--            <plugin>-->
+<!--                <groupId>org.apache.maven.plugins</groupId>-->
+<!--                <artifactId>maven-dependency-plugin</artifactId>-->
+<!--                <executions>-->
+<!--                    <execution>-->
+<!--                        <id>copy-dependencies</id>-->
+<!--                        <phase>package</phase>-->
+<!--                        <goals>-->
+<!--                            <goal>copy-dependencies</goal>-->
+<!--                        </goals>-->
+<!--                        <configuration>-->
+<!--                            <includeScope>compile</includeScope>&lt;!&ndash;исключить тестовые зависимости&ndash;&gt;-->
+<!--                            <outputDirectory>${project.build.directory}/dependency</outputDirectory>-->
+<!--                            <overWriteReleases>false</overWriteReleases>-->
+<!--                            <overWriteSnapshots>false</overWriteSnapshots>-->
+<!--                            <overWriteIfNewer>true</overWriteIfNewer>-->
+<!--                        </configuration>-->
+<!--                    </execution>-->
+<!--                </executions>-->
+<!--            </plugin>-->
             <!--плагин для формирования jar-файла и манифеста-->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <configuration>
-                    <archive>
-                        <manifest>
-                            <addClasspath>true</addClasspath>
-                            <classpathPrefix>lib/</classpathPrefix>
-                            <classpathLayoutType>simple</classpathLayoutType>
-                            <mainClass>${mainClass}</mainClass>
-                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
-                            <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
-                        </manifest>
-                        <manifestEntries>
-                            <Version>${project.build}</Version>
-                            <Implementation-Version>${project.version}-${buildNumber}</Implementation-Version>
-                            <Implementation-Build>${buildNumber}</Implementation-Build>
-                        </manifestEntries>
-                    </archive>
-                </configuration>
-            </plugin>
+<!--            <plugin>-->
+<!--                <groupId>org.apache.maven.plugins</groupId>-->
+<!--                <artifactId>maven-jar-plugin</artifactId>-->
+<!--                <configuration>-->
+<!--                    <archive>-->
+<!--                        <manifest>-->
+<!--                            <addClasspath>true</addClasspath>-->
+<!--                            <classpathPrefix>lib/</classpathPrefix>-->
+<!--                            <classpathLayoutType>simple</classpathLayoutType>-->
+<!--                            <mainClass>${mainClass}</mainClass>-->
+<!--                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>-->
+<!--                            <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>-->
+<!--                        </manifest>-->
+<!--                        <manifestEntries>-->
+<!--                            <Version>${project.build}</Version>-->
+<!--&lt;!&ndash;                            <Implementation-Version>${project.version}-${buildNumber}</Implementation-Version>&ndash;&gt;-->
+<!--&lt;!&ndash;                            <Implementation-Build>${buildNumber}</Implementation-Build>&ndash;&gt;-->
+<!--                        </manifestEntries>-->
+<!--                    </archive>-->
+<!--                </configuration>-->
+<!--            </plugin>-->
             <!--плагин для формирования war-файла и манифеста-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -319,9 +319,9 @@
                         <manifest>
                             <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                         </manifest>
-                        <manifestEntries>
-                            <Implementation-Build>${buildNumber}</Implementation-Build>
-                        </manifestEntries>
+<!--                        <manifestEntries>-->
+<!--                            <Implementation-Build>${buildNumber}</Implementation-Build>-->
+<!--                        </manifestEntries>-->
                     </archive>
                     <failOnMissingWebXml>false</failOnMissingWebXml>
                 </configuration>
@@ -329,59 +329,59 @@
             <!--плагин для удаления ненужных артефактов после завершения сборки-->
             <!--Например, если приложение упаковано в файл WAR, и вы хотите удалить все файлы JAR-->
             <!--(потому что они дублируются внутри файла WAR) в результате остаётся только WAR файл-->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-clean-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>clean-jar-artifacts</id>
-                        <phase>install</phase>
-                        <goals><goal>clean</goal></goals>
-                        <configuration>
-                            <excludeDefaultDirectories>true</excludeDefaultDirectories>
-                            <filesets>
-                                <fileset>
-                                    <directory>target/dependency/*.jar</directory>
-                                </fileset>
-                                <fileset>
-                                    <directory>target</directory>
-                                    <excludes>
-                                        <exclude>*.war</exclude>
-                                    </excludes>
-                                </fileset>
-                            </filesets>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
+<!--            <plugin>-->
+<!--                <groupId>org.apache.maven.plugins</groupId>-->
+<!--                <artifactId>maven-clean-plugin</artifactId>-->
+<!--                <executions>-->
+<!--                    <execution>-->
+<!--                        <id>clean-jar-artifacts</id>-->
+<!--                        <phase>install</phase>-->
+<!--                        <goals><goal>clean</goal></goals>-->
+<!--                        <configuration>-->
+<!--                            <excludeDefaultDirectories>true</excludeDefaultDirectories>-->
+<!--                            <filesets>-->
+<!--                                <fileset>-->
+<!--                                    <directory>target/dependency/*.jar</directory>-->
+<!--                                </fileset>-->
+<!--                                <fileset>-->
+<!--                                    <directory>target</directory>-->
+<!--                                    <excludes>-->
+<!--                                        <exclude>*.war</exclude>-->
+<!--                                    </excludes>-->
+<!--                                </fileset>-->
+<!--                            </filesets>-->
+<!--                        </configuration>-->
+<!--                    </execution>-->
+<!--                </executions>-->
+<!--            </plugin>-->
             <!--плагин для генерации номера сборки-->
 <!--            http://www.mojohaus.org/buildnumber-maven-plugin/usage.html-->
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>buildnumber-maven-plugin</artifactId>
-                <version>1.4</version>
-                <executions>
-                    <execution>
-                        <phase>validate</phase>
-                        <goals>
-                            <goal>create</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-<!--                    doCheck — если true, то проект не скомпилируется пока в нем есть локальные изменения-->
-<!--                    doUpdate — позволяет Maven обновить Вашу текущую ревизию-->
-                    <doCheck>true</doCheck>
-                    <doUpdate>true</doUpdate>
-                    <revisionOnScmFailure>true</revisionOnScmFailure>
-                    <shortRevisionLength>5</shortRevisionLength>
-                    <format>{0}-{1,date,yyyyMMdd}</format>
-                    <items>
-                        <item>${project.version}</item>
-                        <item>timestamp</item>
-                    </items>
-                </configuration>
-            </plugin>
+<!--            <plugin>-->
+<!--                <groupId>org.codehaus.mojo</groupId>-->
+<!--                <artifactId>buildnumber-maven-plugin</artifactId>-->
+<!--                <version>1.4</version>-->
+<!--                <executions>-->
+<!--                    <execution>-->
+<!--                        <phase>validate</phase>-->
+<!--                        <goals>-->
+<!--                            <goal>create</goal>-->
+<!--                        </goals>-->
+<!--                    </execution>-->
+<!--                </executions>-->
+<!--                <configuration>-->
+<!--&lt;!&ndash;                    doCheck — если true, то проект не скомпилируется пока в нем есть локальные изменения&ndash;&gt;-->
+<!--&lt;!&ndash;                    doUpdate — позволяет Maven обновить Вашу текущую ревизию&ndash;&gt;-->
+<!--                    <doCheck>true</doCheck>-->
+<!--                    <doUpdate>true</doUpdate>-->
+<!--                    <revisionOnScmFailure>true</revisionOnScmFailure>-->
+<!--                    <shortRevisionLength>5</shortRevisionLength>-->
+<!--                    <format>{0}-{1,date,yyyyMMdd}</format>-->
+<!--                    <items>-->
+<!--                        <item>${project.version}</item>-->
+<!--                        <item>timestamp</item>-->
+<!--                    </items>-->
+<!--                </configuration>-->
+<!--            </plugin>-->
             <!--плагин для запуска тестов-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
