--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ application.version=${project.version}
 #trace=false # Enable trace logs.
 # WEB PROPERTIES
 #server.address= # Network address to which the server should bind.
-server.port=8888
+#server.port=8888
 #server.port.http=80
 server.servlet.context-path=/v1
 #
