--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,13 +16,13 @@ server.servlet.context-path=/v1
 #
 # Настройка сервера на запуск с SSL/TLS и использования HTTPS
 #http://spring-projects.ru/guides/tutorials-bookmarks/
-security.require-ssl=true
-server.ssl.key-alias=tomcat
-#server.ssl.key-store-type:JKS
-#server.ssl.key-store-type:PKCS12
-server.ssl.key-store=classpath:keystore.jks
-server.ssl.key-store-password=pocket
-server.ssl.key-password=pocket
+#security.require-ssl=true
+#server.ssl.key-alias=tomcat
+##server.ssl.key-store-type:JKS
+##server.ssl.key-store-type:PKCS12
+#server.ssl.key-store=classpath:keystore.jks
+#server.ssl.key-store-password=pocket
+#server.ssl.key-password=pocket
 
 #
 # DATA PROPERTIES
