configuring for local run at remote server

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,22 +6,23 @@ application.version=${project.version}
 #
 # WEB PROPERTIES
 #server.address= # Network address to which the server should bind.
-#server.port=8888
+server.port=8888
 #server.port.http=80
 server.servlet.context-path=/v1
 #
 # Настройка сервера на запуск с SSL/TLS и использования HTTPS
 #http://spring-projects.ru/guides/tutorials-bookmarks/
-#security.require-ssl=true
-#server.ssl.key-alias=tomcat
-#server.ssl.key-store=classpath:keystore.jks
-#server.ssl.key-store-password=pocket
-#server.ssl.key-password=pocket
+security.require-ssl=true
+server.ssl.key-alias=tomcat
+server.ssl.key-store=classpath:keystore.jks
+server.ssl.key-store-password=pocket
+server.ssl.key-password=pocket
 #
 # DATA PROPERTIES
 #mongodb
-spring.data.mongodb.uri=mongodb+srv://pocket:pocket@cluster0-vsjrv.mongodb.net/pocketdb?retryWrites=true
-#spring.data.mongodb.uri=mongodb://localhost:27017/pocketdb
+spring.data.mongodb.repositories.enabled=true
+#spring.data.mongodb.uri=mongodb+srv://pocket:pocket@cluster0-vsjrv.mongodb.net/pocketdb?retryWrites=true
+spring.data.mongodb.uri=mongodb://localhost:27017/pocketdb
 #
 # OTHER
 spring.jackson.serialization.indent_output=true
