proxy for server.tomcat

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,8 @@ application.version=${project.version}
 server.port=8888
 #server.port.http=80
 server.servlet.context-path=/v1
+server.tomcat.remote_ip_header=x-forwarded-for
+server.tomcat.protocol_header=x-forwarded-proto
 #
 # Настройка сервера на запуск с SSL/TLS и использования HTTPS
 #http://spring-projects.ru/guides/tutorials-bookmarks/
