--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,7 +24,9 @@ server.ssl.key-password=pocket
 #mongodb
 spring.data.mongodb.repositories.enabled=true
 #spring.data.mongodb.uri=mongodb+srv://pocket:pocket@cluster0-vsjrv.mongodb.net/pocketdb?retryWrites=true
-spring.data.mongodb.uri=mongodb://localhost:27017/pocketdb
+spring.data.mongodb.uri=mongodb://pocket:pocket@localhost:27017/pocketdb
+#spring.data.mongodb.uri=mongodb://89.208.196.184:27017/pocketdb -u pocket -p pocket --authenticationDatabase pocketdb
+#spring.data.mongodb.uri=mongodb://pocket:pocket@89.208.196.184:27017/pocketdb
 #
 # OTHER
 spring.jackson.serialization.indent_output=true
