--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,27 +8,24 @@ application.version=${project.version}
 #server.address= # Network address to which the server should bind.
 server.port=8888
 #server.port.http=80
-server.servlet.context-path=/v1
-server.tomcat.remote_ip_header=x-forwarded-for
-server.tomcat.protocol_header=x-forwarded-proto
+#server.servlet.context-path=/v1
+#server.tomcat.remote_ip_header=x-forwarded-for
+#server.tomcat.protocol_header=x-forwarded-proto
 #
 # Настройка сервера на запуск с SSL/TLS и использования HTTPS
-#http://spring-projects.ru/guides/tutorials-bookmarks/
-security.require-ssl=true
-server.ssl.key-alias=tomcat
-server.ssl.key-store=classpath:keystore.jks
-server.ssl.key-store-password=pocket
-server.ssl.key-password=pocket
+#security.require-ssl=true
+#server.ssl.key-alias=tomcat
+#server.ssl.key-store=classpath:keystore.jks
+#server.ssl.key-store-password=pocket
+#server.ssl.key-password=pocket
 #
 # DATA PROPERTIES
 #mongodb
 spring.data.mongodb.repositories.enabled=true
 #spring.data.mongodb.uri=mongodb+srv://pocket:pocket@cluster0-vsjrv.mongodb.net/pocketdb?retryWrites=true
 spring.data.mongodb.uri=mongodb://pocket:pocket@localhost:27017/pocketdb
-#spring.data.mongodb.uri=mongodb://89.208.196.184:27017/pocketdb -u pocket -p pocket --authenticationDatabase pocketdb
-#spring.data.mongodb.uri=mongodb://pocket:pocket@89.208.196.184:27017/pocketdb
 #
 # OTHER
 spring.jackson.serialization.indent_output=true
-spring.thymeleaf.cache=false
+#spring.thymeleaf.cache=false
 
